Feat: Add possibilty to delete a specific food from a meal
